PR fortran/24917 * primary.c (match_boz_constant):  Implement postfix BOZ constants;   (match_string_constant): Peek for b, o, z, and x

* gfortran.dg/boz_6.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@107568 138bc75d-0d04-0410-961f-82ee72b054a4